[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/kenney_platformercharacters/PNG/Player/Poses/player_stand.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://resource/Player_standing_cshape.tres" type="Shape2D" id=3]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -55 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -45 )
scale = Vector2( 1e-05, 1 )
shape = ExtResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -58 )
current = true
smoothing_enabled = true
smoothing_speed = 3.0

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DoubleTapTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DoubleTapTimer" to="." method="_on_DoubleTapTimer_timeout"]
